@@ -19,9 +19,8 @@ public class UniqueReporterInjectionTest extends SimpleBaseTest {
     tng.addListener((ITestNGListener) new ReporterListenerForIssue1227());
     tng.run();
     // Since we have another reporting listener that is injected via the service loader file
-    // reporting listeners size will now have to be three (because the ExitCodeListener is also a
-    // reporter backed listener).
-    Assert.assertEquals(tng.getReporters().size(), 3);
+    // reporting listeners size will now have to be two
+    Assert.assertEquals(tng.getReporters().size(), 2);
     Assert.assertEquals(ReporterListenerForIssue1227.counter, 1);
   }
 
